--- a/package.json
+++ b/package.json
@@ -9,5 +9,16 @@
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "node": "^22.6.0"
-  }
+  },
+  "name": "daintree_server",
+  "version": "1.0.0",
+  "description": "express server for daintree retail app",
+  "main": "server.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node ./bin/www.js"
+  },
+  "author": "",
+  "license": "MIT",
+  "type": "module"
 }
