--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "start": "node ./bin/www.js"
+    "start": "node ./bin/www.js",
+    "dev": "nodemon ./bin/www.js"
   },
   "author": "",
   "license": "MIT",
